# dhcplayer

./: Cargo.toml  README.md
src/: discover.rs  helpers.rs  main.rs  release.rs  starvation.rs  transport.rs
src/args/: discover.rs  helpers.rs  mod.rs  release.rs  server.rs  starvation.rs
src/dhcp/: err.rs  helpers.rs  mod.rs  options.rs  packet.rs
src/server/: config.rs  mod.rs
