[package]
name = "dhcplayer"
version = "0.1.2"
authors = ["Eloy Pérez <zer1t0ps@protonmail.com>"]
description = "A tool to play and attack DHCP"
edition = "2018"
license = "AGPL-3.0"
repository = "https://github.com/Zer1t0/dhcplayer"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.28"
nom = "6.1"
rand = "0.8"
clap = "2.33"
log = "0.4"
stderrlog = "0.4"
regex = "1.5"
ctrlc = { version = "3.1", features = ["termination"] }